syntax = "proto3";


option java_multiple_files = true;
option java_package = "es.um.sisdist.videofaces.backend.grpc";

package es.um.sisdist.videofaces.backend.grpc;

service GrpcService
{
	rpc ProcessVideo(stream VideoSpec) returns (PetitionAccepted);
    //rpc IsVideoReady(VideoSpec) returns (VideoAvailability);
}


message VideoSpec
{
	string id = 1;
	string uid = 2;
}

message VideoAvailability
{
    bool available = 1;
}

message PetitionAccepted
{
    bool accepted = 1;
}